Nicer code.